# naval-convoy-protection

./: .gitignore  .gitmodules  LICENSE  PHASE2.md  PHASE3.md  README.md  docker-compose.l1.yml  docker-compose.l2.yml  versions.md
cairo/convoy_protocol/: Scarb.toml
cairo/convoy_protocol/src/: lib.cairo
cairo/drone_account/: README.md  Scarb.toml
cairo/drone_account/src/: lib.cairo
contracts/: .gitignore  README.md  foundry.toml  remappings.txt
contracts/lib/starkware-mainnet/: PATCH.md
contracts/lib/starkware-mainnet/starkware/solidity/components/: FactRegistry.sol  ReferableFactRegistry.sol
contracts/lib/starkware-mainnet/starkware/solidity/interfaces/: IPeriodicColumn.sol  IQueryableFactRegistry.sol  IStarkVerifier.sol
contracts/lib/starkware-mainnet/starkware/solidity/verifier/: FriLayer.sol  FriStatementContract.sol  FriTransform.sol  HornerEvaluator.sol  IMerkleVerifier.sol  MerkleStatementContract.sol  MerkleStatementVerifier.sol  MerkleVerifier.sol  PrimeFieldElement0.sol  Prng.sol  VerifierChannel.sol
contracts/lib/starkware-mainnet/starkware/solidity/verifier/cpu/: CairoBootloaderProgram.sol  CairoVerifierContract.sol  CpuPublicInputOffsetsBase.sol  MemoryPageFactRegistry.sol  PageInfo.sol  PublicMemoryOffsets.sol
contracts/lib/starkware-mainnet/starkware/solidity/verifier/cpu/layout6/: CpuConstraintPoly.sol  CpuFrilessVerifier.sol  CpuOods.sol  CpuPublicInputOffsets.sol  CpuVerifier.sol  Fri.sol  FriStatementVerifier.sol  LayoutSpecific.sol  MemoryAccessUtils.sol  MemoryMap.sol  (+6 more)
contracts/lib/starkware-mainnet/starkware/solidity/verifier/gps/: GpsOutputParser.sol  GpsStatementVerifier.sol
contracts/script/: DeployL1.s.sol  DeployStarkVerifier.s.sol
contracts/src/: CommandLog.sol  IStarkVerifier.sol  MockStarkVerifier.sol  Registry.sol  StarkexBarrel.sol  StarknetCoreStub.sol  Verifier.sol
contracts/test/: MerkleVerifierAlignment.t.sol  MockStarkVerifier.sol  Phase2Acceptance.t.sol  Phase2Acceptance.t.sol.bak  Phase3Acceptance.t.sol  Phase3Acceptance.t.sol.bak
debugger/: README.md  docker-compose.yml
deployments/: local.env
docs/: architecture.md  generate_architecture_pdf.py  mission-spec.md
docs/examples/: alpha_drone_1_cells.json  alpha_drone_2_cells.json  alpha_drone_3_cells.json  alpha_drone_3_cells_DETECTION.json  alpha_drone_4_cells.json  alpha_drone_5_cells.json  bravo_drone_1_cells.json  bravo_drone_2_cells.json  bravo_drone_3_cells.json  bravo_drone_4_cells.json  bravo_drone_5_cells.json
docs/specs/: acceptance.md  cairo-safe-area.md  interfaces.md  protocol.md  threat-model.md
infrastructure/bootloader-cli/: Cargo.toml
infrastructure/bootloader-cli/src/: main.rs
infrastructure/cairo-builder/: Dockerfile
infrastructure/cairo-builder/compute-casm-hash/: Cargo.toml
infrastructure/cairo-builder/compute-casm-hash/src/: main.rs
infrastructure/geth/: genesis.json  init-geth.sh  password.txt
infrastructure/geth/keys/: .gitkeep  README.md
infrastructure/path-a-runner/: Cargo.toml
infrastructure/path-a-runner/src/: main.rs
infrastructure/prover-api/: Dockerfile  entrypoint.sh  fetch_l2_cells.py  prove_pie.py  safe_area_verify.cairo  sample_input.json  submit_proof_l1.py
infrastructure/snos/: Dockerfile  entrypoint.sh  patch_snos_txhash.py
infrastructure/stwo-prover/: Dockerfile
infrastructure/submitter/: Cargo.toml  README.md
infrastructure/submitter/src/: main.rs
scripts/: bootloader-hashes.env  compute-bootloader-hashes.py  deploy-l2.sh  generate-drone-accounts.sh  generate-keys.sh  generate-mission.py  make-dataformats-pdf.py  materialize-starkex-symlinks.sh  open-missions.sh  prove-from-l2.sh  record-sim.py  regenerate-cairo-bootloader-program.py  register-missions.sh  relay-l2-messages.sh  run-all-scenarios.sh  run-scenario.sh  strip-keccak-from-bootloader.py  strip-poseidon-from-bootloader.py  submit-telemetry.sh  up.sh
sweeps/: alpha1_input.json  alpha2_input.json  alpha4_input.json  alpha5_input.json  bravo1_input.json  bravo2_input.json  bravo3_input.json  bravo4_input.json  bravo5_input.json
tmp-etherscan/: mainnet_bootloader_data.json  sourcify-full.html
tmp-etherscan/sources/: CairoBootloaderProgram.json  CairoBootloaderProgram_NEW.json  CpuConstraintPoly_OLDgps_idx6.json  CpuConstraintPoly_layout6_mainnet.json  CpuConstraintPoly_layout7.json  CpuFrilessVerifier_NEW_starknet_with_keccak.json  CpuFrilessVerifier_OLDgps_idx6_starknet.json  CpuFrilessVerifier_REAL_starknet_with_keccak.json  CpuFrilessVerifier_starknet_with_keccak.json  CpuOods_OLDgps_idx6.json  CpuOods_layout6_mainnet.json  CpuOods_layout7.json  EcdsaPointsX.json  EcdsaPointsY.json  EcdsaX_OLDgps_idx6.json  EcdsaX_layout6.json  EcdsaY_OLDgps_idx6.json  EcdsaY_layout6.json  FriStatementContract.json  GpsStatementVerifier.json  GpsStatementVerifier_NEW.json  MemoryPageFactRegistry.json  MemoryPageFactRegistry_NEW.json  MerkleStatementContract.json  PedersenPointsX.json  PedersenPointsY.json  PedersenX_layout6.json  PedersenY_layout6.json  PoseidonFR0_OLDgps_idx6.json  PoseidonFR0_layout6.json  PoseidonFR1_OLDgps_idx6.json  PoseidonFR1_layout6.json  PoseidonFR2_OLDgps_idx6.json  PoseidonFR2_layout6.json  PoseidonFullRoundKey0.json  PoseidonFullRoundKey1.json  PoseidonFullRoundKey2.json  PoseidonPR0_OLDgps_idx6.json  PoseidonPR0_layout6.json  PoseidonPR1_OLDgps_idx6.json  (+1 more)
tmp-path-a-proofs/: evm_proof.json  fact_topologies.json
webapp/: index.html
webapp/css/: style.css
webapp/js/: architecture-diagram.js  convoy-sim.js  poseidon-constants.js  poseidon-core.js  transaction-flow.js
(+3 files in other folders)
