[package]
name = "path-a-runner"
version = "0.1.0"
edition = "2021"
description = """
Minimal adaptation of stark_evm_adapter's examples/verify_stone_proof.rs
with the four mainnet contract addresses substituted for ours
(produced by DeployStarkVerifier.s.sol). Submits a bootloader-wrapped
Stone proof through Phases 1-4 of the StarkWare evm-verifier pipeline:

    1. trace Merkle commits     -> MerkleStatementContract
    2. FRI layer commits        -> FriStatementContract
    3. memory page registers    -> MemoryPageFactRegistry
    4. main proof verification  -> GpsStatementVerifier (direct, bypasses
                                   our convoy Verifier wrapper)

After a successful run, the GpsStatementVerifier's FactRegistry holds the
fact corresponding to our safe_area_verify execution. That fact does NOT
flow into Registry.verdict on our convoy side — for that we'd need the
full convoy-submitter (which routes Phase 4 through our Verifier). This
runner is the milestone test: 'does the deployed StarkWare math actually
accept our proof?'
"""

[[bin]]
name = "path-a-runner"
path = "src/main.rs"

[dependencies]
stark_evm_adapter = { path = "../../vendor/stark-evm-adapter" }
ethers = { version = "2.0", features = ["abigen", "ethers-solc"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
hex = "0.4"
