[package]
name = "convoy-submitter"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Ribeiro"]
description = """
Submits a STARK proof of safe_area_verify.cairo through the full StarkWare
on-chain verifier pipeline (trace Merkle commits, FRI commits, memory page
registrations, final Verifier.registerSafeProof) using stark_evm_adapter
as the splitting library.

This is the convoy-protocol analogue of stark_evm_adapter's
examples/verify_stone_proof.rs example, with three substitutions:

  1. Mainnet hardcoded contract addresses replaced with env vars that
     match the deployment produced by DeployStarkVerifier.s.sol.

  2. The final verifyProofAndRegister call is re-routed from
     GpsStatementVerifier directly to our Verifier.registerSafeProof,
     which adds the relay-whitelist + threshold-reassertion + Registry
     verdict write on top of StarkWare's GPS verifier.

  3. The Cairo program's public outputs (mission_id, drone_id, coverage,
     max p_contact, elapsed, commitment) are extracted from the proof's
     public memory and packaged into a SafeProofInputs struct passed
     alongside the four proof arrays.
"""

[[bin]]
name = "convoy-submitter"
path = "src/main.rs"

[dependencies]
# Pin to the same version vendored under /vendor/stark-evm-adapter as a
# git submodule. The path-dependency form lets us track that submodule's
# commit hash directly without a crates.io release roundtrip.
stark_evm_adapter = { path = "../../vendor/stark-evm-adapter" }

ethers       = { version = "2.0", features = ["abigen", "ethers-solc"] }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
hex          = "0.4"
sha3         = "0.10"  # for keccak256 of programHash, outputHash, factHash
anyhow       = "1.0"
clap         = { version = "4", features = ["derive"] }
