[package]
name    = "compute-casm-hash"
version = "0.1.0"
edition = "2021"
description = "Compute compiled_class_hash from a CASM JSON using cairo-lang-starknet-classes 2.12.3 (matches Madara v0.10.0)."

[dependencies]
cairo-lang-starknet-classes = "=2.12.3"
serde_json                  = "1"
anyhow                      = "1"
